[package]
name = "pipeworks_rust"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["build_pipeworks"]
build_pipeworks = []

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
cmake = "0.1.42"